fix(drawer): Adds z-index to temporary drawer (#212)

--- a/packages/mdc-drawer/temporary/mdc-temporary-drawer.scss
+++ b/packages/mdc-drawer/temporary/mdc-temporary-drawer.scss
@@ -32,6 +32,7 @@
   pointer-events: none;
   box-sizing: border-box;
   contain: strict;
+  z-index: 3;
 
   /* Shaded background */
   &::before {
